--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "webdriverio-v5",
   "version": "1.0.0",
-  "description": "webdriverio v5 test automation framework",
+  "description": "Webdriverio v5 Test Automation Framework",
   "main": "hello-world.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "selenium-server": "./node_modules/.bin/selenium-standalone start",
+    "test": "./node_modules/.bin/wdio wdio.conf.js"
   },
   "keywords": [
     "Webdriverio",
@@ -19,15 +20,15 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
     "@wdio/cli": "^5.12.1",
-    "@wdio/local-runner": "^6.1.12",
-    "@wdio/mocha-framework": "^6.1.8",
+    "@wdio/local-runner": "^5.12.1",
+    "@wdio/mocha-framework": "^5.12.1",
     "@wdio/selenium-standalone-service": "^5.12.1",
-    "@wdio/spec-reporter": "^6.1.12",
-    "@wdio/sync": "^6.1.8",
+    "@wdio/spec-reporter": "^5.12.1",
+    "@wdio/sync": "^5.12.3",
     "chromedriver": "^83.0.0",
     "mocha": "^6.2.0",
     "selenium-standalone": "^6.16.0",
-    "wdio-chromedriver-service": "^6.0.3",
-    "webdriver": "^5.12.1"
+    "wdio-chromedriver-service": "^5.0.2",
+    "webdriverio": "^5.12.1"
   }
 }
